[tool.poetry]
name = "gh-test-alpha"
version = "0.1.0"
description = ""
authors = ["MarcComp <marcus4moore@gmail.com>"]
readme = "README.md"
packages = [{include = "greet"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
poetry = "^1.4.2"
configparser = "^5.3.0"
importlib = "^1.0.4"

[tool.poetry.scripts]
greet = "greet:main.cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
